--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.0",
     "@sanity/client": "^6.24.3",
     "@sanity/icons": "^3.5.6",
     "@sanity/image-url": "1",
