--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/types": "^3.69.0",
     "@sanity/ui": "^2.11.1",
     "@sanity/vision": "3",
+    "@sanity/webhook": "^4.0.4",
     "next": "^15.0.0",
     "next-sanity": "9.8.35",
     "next-themes": "^0.4.4",
